@@ -2,8 +2,6 @@ apply plugin: "java"
 
 version '1.0'
 
-sourceCompatibility = 1.8
-
 sourceSets.main.java.srcDirs = ["src"]
 
 repositories{
@@ -13,7 +11,7 @@ repositories{
 
 ext{
     //the build number that this mod is made for
-    mindustryVersion = 'v120'
+    mindustryVersion = 'v126.2'
     //version of SDK you will be using
     sdkVersion = '30'
     sdkRoot = System.getenv("ANDROID_HOME")
@@ -30,17 +28,22 @@ allprojects{
         if(JavaVersion.current() != JavaVersion.VERSION_1_8){
             options.compilerArgs.addAll(['--release', '8'])
         }
+//
+//        doFirst {
+//            options.compilerArgs.addAll(['--release', '14', "--enable-preview"])
+//        }
     }
 }
 
 dependencies{
+    implementation 'org.jetbrains:annotations:20.1.0'
+    //implementation "com.github.Anuken.Mindustry:annotations:$mindustryVersion"
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
     compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
 }
 
 task jarAndroid{
     dependsOn "jar"
-
     doLast{
         //collect dependencies needed for desugaring
         def files = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File("$sdkRoot/platforms/android-$sdkVersion/android.jar")])
@@ -60,6 +63,7 @@ jar{
 
     from(rootDir){
         include "mod.hjson"
+        include "icon.png"
     }
 
     from("assets/"){
@@ -67,7 +71,18 @@ jar{
     }
 }
 
-task deploy(type: Jar){
+task deploy(type : Jar){
+    def fi = new File("$rootDir/mod.hjson")
+    fi.withReader { reader ->
+        def lines = reader.readLines()
+        fi.withWriter { writer ->
+            lines.each { line ->
+                def check = line.split(":")[0].equals("minGameVersion")
+                if(!check) writer.append("$line\r\n")
+            }
+            writer.append("minGameVersion: ${mindustryVersion.split("v")[1]}\r\n")
+        }
+    }
     dependsOn jarAndroid
     dependsOn jar
     archiveFileName = "${project.archivesBaseName}.jar"
